@@ -20,7 +20,11 @@
       <charset>us-ascii</charset>
     </text>
   </lang>
-  <autodetect/>
+  <autodetect>
+    <snmp>
+      <description>RICOH Aficio CL7200</description>
+    </snmp>
+  </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver>
   <drivers>
