@@ -1,5 +1,8 @@
 2006-12-12  Tim Waugh  <twaugh@redhat.com>
 
+	* printer/Ricoh-Aficio_CL7200.xml: Added SNMP information (RH
+	bug #187387).
+
 	* printer/Epson-Stylus_Photo_895.xml: Added IEEE 1284 info (RH
 	bug #191504).
 
